--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 			<scope>test</scope>
 		</dependency>
 
+
+		<dependency>
+			<groupId></groupId>
+			<artifactId></artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>jakarta.validation</groupId>
 			<artifactId>jakarta.validation-api</artifactId>
