--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.mail.username=policytrustproject@gmail.com
 spring.mail.password=bpou nbyp skfl jdzs
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+
